--- a/regservicelocator/config.yaml
+++ b/regservicelocator/config.yaml
@@ -1,5 +1,5 @@
-"regvalidationservice": ""
-"regprocessingservice": ""
-"regdataservice": ""
-"regrulesservice": ""
+"regvalidationservice": "http://localhost:8082"
+"regprocessingservice": "http://localhost:8083"
+"regdataservice": "http://localhost:8084"
+"regrulesservice": "http://localhost:8085"
 
