--- a/regprocessingservice/package.json
+++ b/regprocessingservice/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/datastore": "^1.0.2",
-    "@google-cloud/pubsub": "^0.12.0"
+    "@google-cloud/pubsub": "^0.12.0",
+    "regression": "^1.4.0"
   }
 }
